--- a/SDS-hw1.Rmd
+++ b/SDS-hw1.Rmd
@@ -250,3 +250,26 @@ The resulting sequence has desirible behavior considering that most of values ar
 ```{r Part3, echo=FALSE}
 remove(x,xx,y)
 
+k <- rnorm(1,5,3)
+xx <- 1/2^k
+y <- array(NA, dim=c(1,100))
+y[1] <- xx
+for(i in 2:100) {
+  x <- y[i-1]
+  if (x <= 0.5) {
+    x <- 2*x
+  }
+  else {
+    x <- 2*(1-x)
+  }
+  y[i] <- x
+}
+
+par(mfrow=c(1,3))
+x <- y
+plot(seq(1:100),x, type = 'l', col="Green", xlab="n", ylab="value", main="Values of Transform")
+hist(x, breaks=10, col="blue", main="Hist of Transform")
+curve(dunif(x),add=T, col="red", lwd=1)
+plot(density(x), main="Density of Transform")
+
+```
